# LinReg

./: CMakeLists.txt
include/: linreg.hpp  matrix.hpp
source/: linreg.cpp  main.cpp  matrix.cpp
